small fix on workflow

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -33,4 +33,4 @@ jobs:
                   context: .
                   file: ./Dockerfile
                   push: true
-                  tags: ghcr.io/${{ github.repository_owner }}/dawarich-companion:latest
+                  tags: ghcr.io/jaumoso/dawarich-companion:latest
